# my_cryptocurrency

./: .gitignore  DAAs.md  README.md  ajuste-dinamico-dificuldade.md  anotacoes.txt  referencias.txt
project/: .dockerignore  .env  .env.example  BD_ARCHITECTURE.md  CLI_USAGE.md  Cargo.toml  Dockerfile  Settings.toml  docker-compose.sim.yml  docker-compose.yml
project/sim/: Makefile  README.md  fork_scenario_runner.py  orchestrator.py  plot_results.py  results.json  run_scenarios.py  scenario_deep_reorg.py  scenario_equal_fork_then_extension.py  scenario_late_rejoin.py  scenario_longer_fork_wins.py  scenario_shorter_fork_rejected.py  scenario_staged_healing_bridge.py  scenario_three_way_fork.py  sim_common.py
project/src/: cli.rs  cli_handler.rs  config.rs  globals.rs  lib.rs  main.rs
project/src/bd/: connection.rs  init.rs  mod.rs
project/src/cli/: cli.rs  cli_handler.rs  client.rs  commands.rs  mod.rs  output.rs  rpc_client.rs
project/src/common/: mod.rs  rpc_types.rs
project/src/daemon/: http_server.rs  lifecycle.rs  mod.rs  rpc_handlers.rs  rpc_server.rs  state.rs
project/src/db/: db.rs  mod.rs  repository.rs
project/src/front/: cli.rs  cli_handler.rs  mod.rs
project/src/model/: block.rs  blockchain.rs  hdkey.rs  io.rs  miner.rs  mod.rs  node.rs  transaction.rs  wallet.rs
project/src/network/: mod.rs  network_message.rs  node_communication.rs  peer_manager.rs  server.rs
project/src/security_utils/: hash.rs  keystore.rs  mod.rs  path_sandbox.rs  signatures.rs
project/tests/: db_tests.rs  fork_helper.rs  node_sync.rs  path_sandbox.rs  peers.rs
(+67 files in other folders)
