[package]
name = "project"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
sha2 = "0.10.9"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
config = "0.15.13"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.21.3"
serde_json = "1.0"
